--- a/Sample/src/main/AndroidManifest.xml
+++ b/Sample/src/main/AndroidManifest.xml
@@ -12,19 +12,14 @@
         android:theme="@android:style/Theme.Holo.Light"
         android:icon="@mipmap/ic_launcher">
 
-        <activity android:name="com.payment.sample.SampleActivity"
-            android:label="@string/app_name">
+        <activity android:name="com.payment.sample.LightThemeActivity"
+            android:theme="@style/LightTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name="com.payment.sample.LightThemeActivity"
-            android:theme="@style/LightTheme" />
-
-        <activity android:name="com.payment.sample.DarkThemeActivity"
-            android:theme="@style/DarkTheme" />
 
     </application>
 
